--- a/_posts/妙妙工具/2024-10-31-1、实用工具.md
+++ b/_posts/妙妙工具/2024-10-31-1、实用工具.md
@@ -21,19 +21,23 @@ categories: ["妙妙工具"]
 
 #### &emsp; 0.1、在线可玩小游戏（无需flash） <br> 
 &emsp; 该[网站](https://oldswf.com/)可以在线直接玩[Q版泡泡堂](https://oldswf.com/game/7120)等小游戏。
-<img src='/images/skills/Useful Tools/0、无用但有趣/0.20、在线可玩小游戏.png' width="500" style="display: block; margin: 0 auto;">
+<img src='/images/skills/Useful Tools/0、无用但有趣/0.20、在线可玩小游戏.png' width="1000" style="display: block; margin: 0 auto;">
 
 #### &emsp; 0.2、赛博做旧，电子包浆 <br> 
 &emsp; 该[网站](https://magiconch.com/patina/)可以将图片做旧。
-<img src='/images/skills/Useful Tools/0、无用但有趣/0.18、赛博做旧.png' width="500" style="display: block; margin: 0 auto;">
+<img src='/images/skills/Useful Tools/0、无用但有趣/0.18、赛博做旧.png' width="1000" style="display: block; margin: 0 auto;">
 
 #### &emsp; 0.3、我告诉你 <br> 
 &emsp; 该[网站](https://msdn.itellyou.cn/)是一个电脑系统的下载网站。
-<img src='/images/skills/Useful Tools/1、实用工具/0.3、我告诉你.png' width="500" style="display: block; margin: 0 auto;">
+<img src='/images/skills/Useful Tools/1、实用工具/0.3、我告诉你.png' width="1000" style="display: block; margin: 0 auto;">
 
-#### &emsp; 0.3、我告诉你 <br> 
+#### &emsp; 0.4、外国人身份 <br> 
 &emsp; 该[网站](https://www.dizhishengcheng.com/)可以生成真正的外国人身份和邮箱。
-<img src='/images/skills/Useful Tools/1、实用工具/0.4、真实身份生成器.png' width="500" style="display: block; margin: 0 auto;">
+<img src='/images/skills/Useful Tools/1、实用工具/0.4、真实身份生成器.png' width="1000" style="display: block; margin: 0 auto;">
+
+#### &emsp; 0.5、歌曲下载 <br> 
+&emsp; 该[网站](https://www.gequbao.com/)可以免费下载很多歌曲。
+<img src='/images/skills/Useful Tools/1、实用工具/0.5、歌曲下载.png' width="1000" style="display: block; margin: 0 auto;">
 
 ## 1、批量修改图片大小和名字
 
