--- a/_posts/妙妙工具/2024-10-31-1、实用工具.md
+++ b/_posts/妙妙工具/2024-10-31-1、实用工具.md
@@ -11,7 +11,8 @@ categories: ["妙妙工具"]
 - [0.1、在线可玩小游戏（无需flash）](https://oldswf.com/)
 - [0.2、赛博做旧，电子包浆](https://magiconch.com/patina/)
 - [0.3、我告诉你](https://msdn.itellyou.cn/)
-- [0.2、赛博做旧，电子包浆](https://magiconch.com/patina/)
+- [0.4、外国人身份](https://www.dizhishengcheng.com/)
+- [0.5、歌曲下载](https://www.gequbao.com/)
 
 #### 1、批量修改图片大小和名字
 - [1.1、批量重命名](http://huaaorain.github.io/files/UsefulTools/1、批量修改/批量修改文件名_4.01.exe)
