--- a/_posts/妙妙工具/2024-10-24-8、妙妙工具网站.md
+++ b/_posts/妙妙工具/2024-10-24-8、妙妙工具网站.md
@@ -22,7 +22,7 @@ categories: ["妙妙工具"]
 &emsp; [图片编辑器](https://photokit.com/?lang=zh#)是一个在线图片处理工具箱，包含渐变色生成、图像增强等。
 <img src='/images/skills/Useful Tools/8、妙妙工具网站/8.1、图片编辑器.png' width="1500" style="display: block; margin: 0 auto;">
 
-&emsp; [niemao.top](niemao.top)可以在线捏猫，**此外在网站下方还提供了许多其他有意思的东西**。
+&emsp; [niemao.top](https://niemao.top)可以在线捏猫，**此外在网站下方还提供了许多其他有意思的东西**。
 <img src='/images/skills/Useful Tools/0、无用但有趣/0.15、在线捏猫.png' width="1500" style="display: block; margin: 0 auto;">
 
 ## &emsp; 8.2、大圣盘-网盘资源搜索 <br> 
