--- a/_posts/妙妙工具/2024-10-31-1、实用工具.md
+++ b/_posts/妙妙工具/2024-10-31-1、实用工具.md
@@ -13,6 +13,7 @@ categories: ["妙妙工具"]
 - [0.3、我告诉你](https://msdn.itellyou.cn/)
 - [0.4、外国人身份](https://www.dizhishengcheng.com/)
 - [0.5、歌曲下载](https://www.gequbao.com/)
+- [0.6、手写转换](https://www.autohanding.com/)
 
 #### 1、批量修改图片大小和名字
 - [1.1、批量重命名](http://huaaorain.github.io/files/UsefulTools/1、批量修改/批量修改文件名_4.01.exe)
@@ -39,6 +40,14 @@ categories: ["妙妙工具"]
 #### &emsp; 0.5、歌曲下载 <br> 
 &emsp; 该[网站](https://www.gequbao.com/)可以免费下载很多歌曲。
 <img src='/images/skills/Useful Tools/1、实用工具/0.5、歌曲下载.png' width="1000" style="display: block; margin: 0 auto;">
+
+#### &emsp; 0.6、手写转换 <br> 
+&emsp; 该[网站](https://www.autohanding.com/)可以将word转换为手写字体。
+<img src='/images/skills/Useful Tools/1、实用工具/0.6、手写转换.png' width="1000" style="display: block; margin: 0 auto;">
+
+#### &emsp; 0.7、鱼饼的小屋 <br> 
+&emsp; [niemao.top](http://yubing.store/)是一个工具网站合集。
+<img src='/images/skills/Useful Tools/1、实用工具/0.7、鱼饼的小屋.png' width="1000" style="display: block; margin: 0 auto;">
 
 ## 1、批量修改图片大小和名字
 
