--- a/_posts/电脑小技巧/2025-03-26-4、关闭数据跨境传输.md
+++ b/_posts/电脑小技巧/2025-03-26-4、关闭数据跨境传输.md
@@ -77,3 +77,6 @@ categories: ["电脑小技巧"]
 <img src='/images/电脑小技巧/4、关闭跨境传输/22、关闭界面.png' width="1000" style="display: block; margin: 0 auto;">
 
 &emsp; （20）重启电脑。
+
+
+参考：[永久关闭“同意个人数据跨境传输”的方法](https://www.modb.pro/db/1856617439845429248)
