--- a/_posts/电脑小技巧/2025-03-28-2、磁盘格式化.md
+++ b/_posts/电脑小技巧/2025-03-28-2、磁盘格式化.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "2、U盘启动盘恢复"
+title: "2、磁盘格式化"
 categories: ["电脑小技巧"]
 ---
 
@@ -43,6 +43,18 @@ categories: ["电脑小技巧"]
 <img src='/images/电脑小技巧/2、U盘启动盘恢复/1.5、U盘系统格式.jpg' width="500" style="display: block; margin: 0 auto;">
 
 &emsp; 以上就是将U盘启动盘复原成普通U盘的方法了，这种方法不仅适用于好系统U盘启动制作的U盘启动盘，还适用于其它软件制作的U盘启动盘。但是要注意的是，在操作之前，记得备份好U盘里面的重要数据，以免造成损失。
+
+&emsp; 另外在格式化完，创建新的卷时可能会让选MBR或GPT分区格式：
+
+📋MBR 是 Master Boot Record 的缩写，是一种较旧的磁盘类型，于1983年首次在IBM PC DOS 2.0中引入。由于MBR年代久远，MBR只适用于最大容量为2TB的硬盘，如果是更大容量的硬盘使用MBR，那么多出来的部分将无法被识别。MBR中分区表的组织将磁盘的可寻址存储空间限制为2TB（232×512字节）。并且只支持4个主分区，或者3个主分区和1个扩展分区的组合。如果要创建更多分区，则需要将其中一个主分区设为“扩展分区”，然后在扩展分区内创建更多逻辑分区。
+
+📋GPT 全称Globally Unique Identifier Partition Table ，全局唯一标识分区表（GUID Partition Table，缩写：GPT），是一种与 UEFI 相关的新磁盘布局。GPT使用了GUID分割表格这一更加符合现代需求的技术取代了老旧的MBR。 GPT对于普通用户最显然易见的优势在于其突破了MBR最大只支持2T硬盘的限制，同时也允许用户对硬盘划分数量不限的分区。GPT 分区表磁盘支持长达 2^64 个块的卷，例如对于具有 512-字节扇区，即 9.44 ZB – zettabytes，并且能够拥有多达 128 个主分区。GPT分区同时也具有更高的性能，这是因为分区表的复制和循环冗余校验（CRC）保护机制来实现的。与MBR磁盘分区不同的是，GPT磁盘将系统相关的重要数据存放于分区中，而不是未分区或隐藏的扇区中。GPT具有冗余的主分区表和备份分区表，可以优化分区数据结构的完整性。
+
+&emsp; 首先不论是MBR还是GPT，都是文件系统的分区方式，只是表示文件在硬盘上的存储方式，这个都由操作系统管理，对用户是完全透明的，所以无论使用哪种，对硬盘都没有任何影响。
+
+&emsp; 不过对于总容量小于或等于2TB的硬盘，分区表可以选择MBR，也可以选择GPT。从兼容性考虑的话，一般建议使用MBR分区表就可以满足使用要求了。
+
+&emsp; 对于总容量大于2TB的硬盘，必须选择GPT分区表，才能识别所有的硬盘容量。MBR分区表由于自身设计的局限性，最大只能支持2TB的地址空间。对于超过2TB的大硬盘，如果使用MBR分区表，将无法识别和使用2TB后的空间。
 
 ## 参考文献
 
