--- a/_posts/电脑小技巧/2025-03-25-5、系统迁移.md
+++ b/_posts/电脑小技巧/2025-03-25-5、系统迁移.md
@@ -39,3 +39,5 @@ PS：大多数情况下，使用热迁移的方式，更为方便、安全，建
 🔖系统迁移到第二块硬盘（或SSD固态硬盘、U盘等）上之后，如果是支持UEFI的电脑，并且在迁移系统之前设置了完成后从目标盘启动。重启电脑后，会自动用迁移后的新系统启动。否则，需手动进入BIOS设置，将启动硬盘设置为新的硬盘，之后，就可以用这块硬盘启动电脑，进入系统了。
 
 🔖进入系统后，会发现，Windows系统中安装过的软件，连带原来系统分区中的数据，都被迁移到目标硬盘的，新的系统分区中。<strong style="color: red;">什么都不用改就能象以前一样使用电脑</strong>，不用重装系统，不用重装软件，也不用拷贝数据，很方便。
+
+参考：[利用DiskGenius对电脑磁盘系统数据迁移](https://blog.csdn.net/weixin_42880082/article/details/121349695)
